--- a/CMS_APP/CMS.csproj
+++ b/CMS_APP/CMS.csproj
@@ -122,6 +122,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CMSWebApi\CMSWebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="CMSWebApi">
       <HintPath>..\CMSWebApi\bin\Debug\net6.0\CMSWebApi.dll</HintPath>
     </Reference>
