Committing  Candidate registration.

--- a/CMSWebApi/appsettings.json
+++ b/CMSWebApi/appsettings.json
@@ -11,6 +11,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TBS24;Initial Catalog=CMS;User ID=sa;Password=sa@123"
+    "DefaultConnection": "Data Source=TBS35;Initial Catalog=CMS;User ID=chintan;Password=TBS@123"
   }
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "data source=DESKTOP-E0793HO\\SQLEXPRESS2019; database=CMS ; integrated security=true "
+  //}
 }
