Reset password link send to the user

--- a/CMSWebApi/appsettings.json
+++ b/CMSWebApi/appsettings.json
@@ -9,6 +9,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "techcmuskan@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "techcmuskan@gmail.com",
+    "Password": "eegwcrhppfeanqqw"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=TBS35;Initial Catalog=CMS;User ID=chintan;Password=TBS@123"
